Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-xxxxx
Description
If I remember correctly, I noticed this "intermittent" (cont'able) assertion at end of Stage 2 (and LiveCD!?) while installing a couple recent builds.
For example:
Virtual PC 2004 SP1 (5.3.582.27)
(/ntoskrnl/kd64/kdinit.c:75) ReactOS 0.4.15-x86-dev (Build 20210619-0.4.15-dev-2736-ga4405f9) (Commit a4405f9610f7703a647f43229a8e063fb85c98d7)
|
[...]
|
zipfldr.cpp:76: (/dll/shellext/zipfldr/zipfldr.cpp:76) CreateEmptyFile('X:\Profiles\Default User\SendTo\Compressed (zipped) Folder.ZFSendToTarget')
|
(/ntoskrnl/mm/balance.c:150) MM BALANCER: Removing access bit!
|
|
*** Assertion failed: (Pfn1->u3.e2.ReferenceCount == 0) || (Pfn1->u3.e1.WriteInProgress)
|
*** Source File: /ntoskrnl/mm/ARM3/procsup.c, line 1376
|
|
Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)?
|
kdb:> o
|
Execute '.cxr FE2E389C' to dump context
|
|
Entered debugger on embedded INT3 at 0x0008:0x80583BCD.
|
kdb:> bt
|
Eip:
|
<ntoskrnl.exe:183bce>
|
Frames:
|
<ntoskrnl.exe:c4cb2>
|
<ntoskrnl.exe:11bcdc>
|
<ntoskrnl.exe:1096d4>
|
<ntoskrnl.exe:10f877>
|
<ntoskrnl.exe:11b4fc>
|
<ntoskrnl.exe:1096d4>
|
<ntoskrnl.exe:10f877>
|
<ntoskrnl.exe:11aefb>
|
<ntoskrnl.exe:3b798>
|
<ntoskrnl.exe:127668>
|
<ntoskrnl.exe:1426fd>
|
<ntoskrnl.exe:12763b>
|
<ec835356>
|
Couldn't access memory at 0x57E58959!
|
kdb:> cont
|
(/ntoskrnl/mm/balance.c:150) MM BALANCER: Removing access bit!
|
(/ntoskrnl/mm/balance.c:150) MM BALANCER: Removing access bit!
|
err:(/win32ss/user/user32/windows/window.c:524) CreateWindowExW RegisterSystemControls
|
[...]
|
–
1322 MmDeleteProcessAddressSpace(IN PEPROCESS Process)
|
...
|
1375 /* Page table is now dead. Bye bye... */ |
1376 ASSERT((Pfn1->u3.e2.ReferenceCount == 0) || (Pfn1->u3.e1.WriteInProgress));
|
–
This assertion looks related to CORE-17552: similar/regression?
Attachments
Issue Links
- relates to
-
CORE-16737 MM ARM3 assertion "Pfn1->u3.e2.ReferenceCount == 0" when building ros on ros
-
- Resolved
-