[NTOS:MM] Copy the WorkingSet page when initializing "hand-built" process

CORE-17642